# web-mcp-tools

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  docker.yml  lint.yml  publish.yml  tests.yml
docker/: Dockerfile
src/web_mcp_tools/: __init__.py  __main__.py  cli.py  url.py
src/web_mcp_tools/config/: __init__.py  env.py  firecrawl.py  server.py
src/web_mcp_tools/mcp/: __init__.py  server.py
src/web_mcp_tools/tools/: __init__.py
src/web_mcp_tools/tools/web/: __init__.py  cookies.py  fetch.py  request_policy.py  result.py  scrape.py  search.py
tests/: test_cli.py  test_smoke.py  test_web_fetch_mcp.py  test_web_fetch_request_policy.py  test_web_scrape_mcp.py  test_web_scrape_request_policy.py
