[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-mcp-tools"
dynamic = ["version"]
description = "Firecrawl-backed web scrape MCP server with browser cookie support"
requires-python = ">=3.14,<3.15"
readme = "README.md"
authors = [
    { name = "Arjun Earthperson", email = "mail@earthperson.org" },
]
dependencies = [
    "fastmcp==3.2.0",
    "firecrawl>=4.22.1",
    "pydantic>=2.11",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=26.0.0",
    "nuitka>=4.0.1",
]

[project.scripts]
web-mcp-tools = "web_mcp_tools.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
target-version = ["py314"]

[tool.hatch.version]
path = "src/web_mcp_tools/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/web_mcp_tools"]

[tool.hatch.build.targets.sdist]
include = ["src/web_mcp_tools/**"]
